--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Portfolio - Développeur Web</title>
+    <title>Herman - Développeur Web</title>
     <meta name="description" content="Portfolio de Herman, développeur web passionné par la création de sites modernes et responsives">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#accueil" class="logo">MonPortfolio</a>
+                <a href="#accueil" class="logo">Herman</a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -51,7 +51,9 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="https://via.placeholder.com/400x400/007bff/ffffff?text=Photo+Pro" alt="Photo professionnelle de Herman" class="profile-img">
+            <div class="profile-placeholder">
+                <span>H</span>
+            </div>
         </div>
     </section>
 
@@ -65,7 +67,7 @@
                     <p>Mon objectif est de concevoir des solutions élégantes qui répondent parfaitement aux besoins des utilisateurs tout en respectant les meilleures pratiques du développement.</p>
                     <div class="about-info">
                         <div class="info-item">
-                            <strong>Email:</strong> votre.email@example.com
+                            <strong>Email:</strong> herman.dev@example.com
                         </div>
                         <div class="info-item">
                             <strong>Téléphone:</strong> +33 1 23 45 67 89
@@ -123,7 +125,9 @@
             <h2 class="section-title">Mes Projets</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200/343a40/ffffff?text=Projet+1" alt="Capture d'écran du projet Application E-commerce" class="project-img">
+                    <div class="project-img-placeholder">
+                        <span>🛒</span>
+                    </div>
                     <div class="project-content">
                         <h3>Application E-commerce</h3>
                         <p>Plateforme de vente en ligne avec panier et paiement sécurisé</p>
@@ -139,7 +143,9 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200/343a40/ffffff?text=Projet+2" alt="Capture d'écran du projet Blog Personnel" class="project-img">
+                    <div class="project-img-placeholder">
+                        <span>📝</span>
+                    </div>
                     <div class="project-content">
                         <h3>Blog Personnel</h3>
                         <p>Blog moderne avec système de commentaires et administration</p>
@@ -155,7 +161,9 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200/343a40/ffffff?text=Projet+3" alt="Capture d'écran du projet Application Météo" class="project-img">
+                    <div class="project-img-placeholder">
+                        <span>🌤️</span>
+                    </div>
                     <div class="project-content">
                         <h3>Application Météo</h3>
                         <p>Application météo en temps réel avec géolocalisation</p>
@@ -184,13 +192,13 @@
                     <p>N'hésitez pas à me contacter pour discuter de votre projet.</p>
                     <div class="contact-methods">
                         <div class="contact-method">
-                            <strong>Email:</strong> votre.email@example.com
+                            <strong>Email:</strong> herman.dev@example.com
                         </div>
                         <div class="contact-method">
                             <strong>Téléphone:</strong> +33 1 23 45 67 89
                         </div>
                         <div class="contact-method">
-                            <strong>LinkedIn:</strong> linkedin.com/in/votrenom
+                            <strong>LinkedIn:</strong> linkedin.com/in/herman
                         </div>
                     </div>
                 </div>
@@ -218,15 +226,9 @@
         <div class="container">
             <p>&copy; 2024 Herman. Tous droits réservés.</p>
             <div class="social-links">
-                <a href="#" aria-label="GitHub">
-                    <img src="https://via.placeholder.com/24/ffffff/000000?text=G" alt="Logo GitHub">
-                </a>
-                <a href="#" aria-label="LinkedIn">
-                    <img src="https://via.placeholder.com/24/ffffff/000000?text=L" alt="Logo LinkedIn">
-                </a>
-                <a href="#" aria-label="Twitter">
-                    <img src="https://via.placeholder.com/24/ffffff/000000?text=T" alt="Logo Twitter">
-                </a>
+                <a href="#" aria-label="GitHub">GitHub</a>
+                <a href="#" aria-label="LinkedIn">LinkedIn</a>
+                <a href="#" aria-label="Twitter">Twitter</a>
             </div>
         </div>
     </footer>
