--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Herman - Développeur Web</title>
     <meta name="description" content="Portfolio de Herman, développeur web passionné par la création de sites modernes et responsives">
     <link rel="stylesheet" href="styles.css">
+    
+    <meta property="og:title" content="Herman | Développeur Web Full Stack, Prêt à Coder.">
+    <meta property="og:description" content="Découvrez mon portfolio : des projets modernes et responsives en React, Node.js et plus encore. ">
+    <meta property="og:image" content="https://i.imgur.com/GzQW3S4.jpg">
+    <meta property="og:url" content="https://docs.github.com/fr/pages/getting-started-with-github-pages/creating-a-github-pages-site">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Herman | Portfolio de Développeur Web">
+    <meta name="twitter:image" content="https://i.imgur.com/GzQW3S4.jpg">
 </head>
 <body>
     <!-- Navigation -->
